--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,17 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Dependencies
 node_modules
+/PetPalFrontend/node_modules
+/PetPalBackend/node_modules
+
+# Environment files
+.env
+/PetPalFrontend/.env
+/PetPalBackend/.env
+
+# Build directories
 dist
 dist-ssr
 *.local
