--- a/PetPalFrontend/package.json
+++ b/PetPalFrontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@formspree/react": "^2.5.1",
     "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.9",
     "js-cookie": "^3.0.5",
