--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,23 @@
 {
-    "rewrites": [
+    "version": 2,
+    "builds": [
       {
-        "source": "/api/(.*)",
-        "destination": "/PetPalBackend/index.js"
+        "src": "PetPalBackend/index.js",
+        "use": "@vercel/node"
+      },
+      {
+        "src": "PetPalFrontend/package.json",
+        "use": "@vercel/static-build"
+      }
+    ],
+    "routes": [
+      {
+        "src": "/api/(.*)",
+        "dest": "PetPalBackend/index.js"
+      },
+      {
+        "src": "/(.*)",
+        "dest": "PetPalFrontend/dist/$1"
       }
     ]
   }
