--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "petpalbackend",
+  "name": "server",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -12,6 +12,7 @@
   "description": "",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^2.5.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
@@ -31,6 +32,6 @@
     "@Middlewares": "App/Middlewares",
     "@Helpers": "App/Helpers",
     "@Routes": "App/Routes",
-    "@Models" : "App/Models"
+    "@Models": "App/Models"
   }
 }
